<resources>
    <string name="app_name">PKAN</string>
    <string name="rupees_sign">\u20B9</string>
    <string name="activity_landing_page_your">Your</string>
    <string name="activity_landing_page_meal">Meal</string>
    <string name="activity_landing_page_deal">Deal</string>
    <string name="activity_landing_page_login_button_text">Log In</string>
    <string name="activity_login_phone_number_header">Phone Verification</string>
    <string name="activity_login_phone_number_sub_header">We will send you an OTP on 
        this mobile number</string>
    <string name="activity_login_phone_number_country_code">+91</string>
    <string name="activity_login_phone_number_input_hint">Phone number</string>
    <string name="activity_login_phone_number_send_otp_button_text">Get OTP</string>
    <string name="activity_login_phone_number_radio_customer">Customer</string>
    <string name="activity_login_phone_number_radio_mess">Mess</string>
    <string name="activity_login_verify_otp_header">Verify Otp</string>
    <string name="activity_login_verify_otp_sub_header">Enter The OTP sent to your phone</string>
    <string name="activity_login_verify_otp_resend_otp_label">Did not receive OTP </string>
    <string name="activity_login_verify_otp_input_hint">OTP</string>
    <string name="activity_login_verify_otp_resend_otp">resend OTP</string>
    <string name="activity_login_verify_otp_verify_button_text">Verify and Proceed</string>
    <string name="activity_customer_profile_edit_header">Set Your Profile</string>
    <string name="activity_customer_profile_edit_name_hint">Enter your full name</string>
    <string name="activity_customer_profile_edit_gender_hint">Select Gender</string>
    <string name="activity_customer_profile_edit_city_hint">Select City</string>
    <string name="activity_customer_profile_edit_area_hint">Select Area</string>
    <string name="activity_customer_profile_edit_house_number_hint">Enter your house number</string>
    <string name="activity_customer_profile_edit_room_number_hint">Enter your room number</string>
    <string name="activity_customer_profile_edit_landmark_hint">Enter nearby landmark</string>
    <string name="activity_customer_profile_edit_save_button_text">Save</string>
    <string name="activity_customer_plan_select_header">Select Plan</string>
    <string name="activity_customer_plan_select_regular_plan_title">Regular Plan</string>
    <string name="activity_customer_plan_select_regular_plan_button_text">Add</string>
    <string name="activity_customer_plan_select_regular_plan_amount_hint">Amount</string>
    <string name="activity_customer_plan_select_other_plan_button_text">Select</string>
    <string name="activity_customer_plan_select_skip_button_text">Skip</string>
    <string name="fragment_customer_profile_profile_header">Profile</string>
    <string name="fragment_customer_profile_plan_header">Plan</string>
    <string name="fragment_customer_profile_label_name">Name</string>
    <string name="fragment_customer_profile_label_gender">Gender</string>
    <string name="fragment_customer_profile_label_city">City</string>
    <string name="fragment_customer_profile_label_area">Area</string>
    <string name="fragment_customer_profile_label_referral_code">Referral Code</string>
    <string name="fragment_customer_profile_referral_code_detail">Share this code with new users
        and get Rs. 50 in your PKAN account after their first order</string>
    <string name="fragment_customer_profile_label_house_number">House Number</string>
    <string name="fragment_customer_profile_label_room_number">Room Number</string>
    <string name="fragment_customer_profile_label_landmark">Landmark</string>
    <string name="fragment_customer_profile_label_available_balance">Balance</string>
    <string name="fragment_customer_profile_label_plan">Current Plan</string>
    <string name="fragment_customer_profile_history_button_text">History</string>
    <string name="fragment_customer_profile_logout_button_text">Log Out</string>
    <string name="activity_customer_history_header">Previous Orders</string>
    <string name="activity_customer_history_detail_special_text">Special</string>
    <string name="activity_customer_history_detail_item_header">Items</string>
    <string name="activity_customer_history_detail_mess_address_header">Mess Address</string>
    <string name="activity_customer_history_detail_customer_reviews_header">Your Review</string>
    <string name="activity_customer_history_detail_customer_reviews_hint">Write your review here</string>
    <string name="activity_customer_history_detail_customer_reviews_save_button_text">Save Review</string>
    <string name="fragment_customer_home_upcoming_order">Upcoming Order</string>
    <string name="fragment_meal_select_search_hint">Search for mess</string>
    <string name="customer_home_select_meal_item_special_text">Special</string>
    <string name="customer_home_select_meal_item_select_button_text">SELECT</string>
    <string name="activity_customer_order_detail_special_text">Special</string>
    <string name="activity_customer_order_detail_item_header">Items</string>
    <string name="activity_customer_order_detail_place_order_button_text">Place Order</string>
    <string name="activity_customer_order_detail_mess_address_header">Mess Address</string>
    <string name="activity_customer_order_detail_customer_reviews_header">Customer Reviews</string>
    <string name="activity_customer_confirm_order_special_text">Special</string>
    <string name="activity_customer_confirm_order_item_header">Items</string>
    <string name="activity_customer_confirm_order_place_order_button_text">Confirm Order</string>
    <string name="activity_customer_confirm_order_customer_address_header">Address</string>
    <string name="activity_customer_confirm_order_order_type_header">Order Type</string>
    <string name="activity_customer_confirm_order_order_type_in_mess">In Mess</string>
    <string name="activity_customer_confirm_order_order_type_home_delivery">Home delivery</string>
    <string name="activity_customer_confirm_order_address_name_hint">Name</string>
    <string name="activity_customer_confirm_order_address_house_number_hint">House No.</string>
    <string name="activity_customer_confirm_order_address_room_number_hint">Room No.</string>
    <string name="activity_customer_confirm_order_address_landmark_hint">Landmark</string>
    <string name="activity_customer_confirm_order_address_area_hint">Area</string>
    <string name="activity_customer_confirm_order_include_wallet_balance">Use wallet balance</string>
    <string name="activity_customer_confirm_order_payment_header">Payment</string>
    <string name="activity_mess_basic_profile_edit_header">Set Mess Profile</string>
    <string name="activity_mess_basic_profile_edit_input_name_hint">Name of Mess</string>
    <string name="activity_mess_basic_profile_edit_input_description_hint">Description</string>
    <string name="activity_mess_basic_profile_edit_input_address_hint">Address</string>
    <string name="activity_mess_basic_profile_edit_input_timings_hint">Mess Timings</string>
    <string name="activity_mess_basic_profile_edit_input_monthly_charges_hint">Monthly Charges</string>
    <string name="activity_mess_basic_profile_edit_upload_pic_hint">Upload Picture</string>
    <string name="activity_mess_basic_profile_edit_next_button_text">Next</string>
    <string name="activity_mess_basic_profile_edit_upload_pic_default_status">not uploaded</string>
    <string name="activity_mess_basic_profile_edit_radio_button_home_delivery">Home Delivery</string>
    <string name="activity_mess_basic_profile_edit_radio_button_in_mess">In Mess</string>
    <string name="activity_mess_owner_profile_edit_header">Save Owner details</string>
    <string name="activity_mess_owner_profile_edit_input_name_hint">Name</string>
    <string name="activity_mess_owner_profile_edit_input_address_hint">Address</string>
    <string name="activity_mess_owner_profile_edit_input_phone_number_hint">Phone Number</string>
    <string name="activity_mess_owner_profile_edit_upload_id_pic_label">Upload picture of any id
        e.g, Aadhar card, driving license, etc</string>
    <string name="activity_mess_owner_profile_edit_upload_id_pic_hint">Upload Picture</string>
    <string name="activity_mess_owner_profile_edit_next_button_text">Next</string>
    <string name="activity_mess_owner_profile_edit_upload_pic_default_status">not uploaded</string>
    <string name="activity_mess_payment_options_edit_header">Save Payment Details</string>
    <string name="activity_mess_payment_options_edit_upi_sub_header">Set UPI details</string>
    <string name="activity_mess_payment_options_edit_input_upi_hint">Enter UPI id</string>
    <string name="activity_mess_payment_options_edit_or_text">Or</string>
    <string name="activity_mess_payment_options_edit_bank_sub_header">Enter Bank account
        details</string>
    <string name="activity_mess_payment_options_edit_input_account_number_hint">Account no.</string>
    <string name="activity_mess_payment_options_edit_input_ifsc_hint">IFSC code</string>
    <string name="activity_mess_payment_options_edit_input_bank_name_hint">Bank Name</string>
    <string name="activity_mess_payment_options_edit_input_account_holder_hint">Account holder
        name</string>
    <string name="activity_mess_payment_options_edit_save_button_text">Save</string>
    <string name="activity_mess_payment_options_edit_skip_button_text">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_mess_delivery_persons_edit_sub_header">Delivery Numbers</string>
    <string name="activity_mess_delivery_persons_edit_add_new_number_header">Add new number</string>
    <string name="activity_mess_delivery_persons_edit_new_number_number_hint">Number</string>
    <string name="activity_mess_delivery_persons_edit_new_number_name_hint">Name</string>
    <string name="activity_mess_delivery_persons_edit_add_button_text">Add</string>
    <string name="activity_mess_delivery_area_edit_header">Delivery Areas</string>
    <string name="activity_mess_delivery_area_edit_add_new_area_header">Add new Area</string>
    <string name="activity_mess_delivery_area_edit_add_button_text">Add</string>
    <string name="fragment_mess_profile_name_label">Name</string>
    <string name="fragment_mess_profile_city_label">City</string>
    <string name="fragment_mess_profile_area_label">Area</string>
    <string name="fragment_mess_profile_phone_number_label">Phone Number</string>
    <string name="fragment_mess_profile_address_label">Address</string>
    <string name="fragment_mess_profile_mess_timing_label">Mess Timings</string>
    <string name="fragment_mess_profile_monthly_charge_label">Monthly Charge</string>
    <string name="fragment_mess_profile_view_payment_details_label">View Payment Details</string>
    <string name="fragment_mess_profile_view_owner_details_label">View Owner Details</string>
    <string name="fragment_mess_profile_view_delivery_numbers">View Delivery Numbers</string>
    <string name="fragment_mess_profile_view_delivery_areas">View Delivery Areas</string>
    <string name="fragment_mess_profile_view_payment_upi_header">UPI Details</string>
    <string name="fragment_mess_profile_view_payment_upi_label">UPI Id</string>
    <string name="fragment_mess_profile_view_payment_bank_header">Bank Details</string>
    <string name="fragment_mess_profile_view_payment_account_number_label">Account Number</string>
    <string name="fragment_mess_profile_view_payment_ifsc_code_label">IFSC Code</string>
    <string name="fragment_mess_profile_view_payment_bank_name_label">Bank Name</string>
    <string name="fragment_mess_profile_view_payment_account_holder_name_label">Account Holder</string>
    <string name="fragment_mess_profile_view_owner_name_label">Name</string>
</resources>