<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_login_phone_number_background"
    tools:context=".login.LoginActivityPhoneNumber">

    <EditText
        android:id="@+id/loginPhoneEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@color/activity_login_phone_number_input_background"
        android:ems="10"
        android:hint="@string/activity_login_phone_number_input_hint"
        android:inputType="phone"
        android:paddingLeft="5dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:textColor="@color/activity_login_phone_number_input"
        android:textColorHint="@color/activity_login_phone_number_input_hint"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/loginSendOtpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/login_phone_number_send_otp_button_background"
        app:backgroundTint="@null"
        android:text="@string/activity_login_phone_number_send_otp_button_text"
        android:textColor="@color/activity_landing_page_login_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/activity_login_phone_number_header"
        android:textColor="@color/activity_login_phone_number_header"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPhoneNumberCustomerRadioButton" />

    <ImageView
        android:id="@+id/loginPhoneNumberBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/activity_login_phone_number_sub_header"
        android:textAlignment="center"
        android:textColor="@color/activity_login_phone_number_sub_header"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <RadioButton
        android:id="@+id/loginPhoneNumberCustomerRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:checked="true"
        android:text="@string/activity_login_phone_number_radio_customer"
        android:textColor="@color/activity_login_phone_number_input"
        app:layout_constraintEnd_toStartOf="@+id/loginPhoneNumberMessRadioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPhoneNumberBackImageView" />

    <RadioButton
        android:id="@+id/loginPhoneNumberMessRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/activity_login_phone_number_radio_mess"
        android:textColor="@color/activity_login_phone_number_input"
        app:layout_constraintBottom_toBottomOf="@+id/loginPhoneNumberCustomerRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginPhoneNumberCustomerRadioButton"
        app:layout_constraintTop_toTopOf="@+id/loginPhoneNumberCustomerRadioButton" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:background="@color/activity_login_phone_number_input_background"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/activity_login_phone_number_country_code"
        android:textAlignment="center"
        android:textColor="@color/activity_login_phone_number_input"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginPhoneEditTextView"
        app:layout_constraintEnd_toStartOf="@+id/loginPhoneEditTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginPhoneEditTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>