<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_customer_plan_select_background"
    tools:context=".customer.plans.CustomerPlanSelectActivity">

    <ImageView
        android:id="@+id/customerSelectPlanBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/activity_customer_plan_select_header"
        android:textColor="@color/activity_customer_plan_select_header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/activity_customer_plan_select_horizontal_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_goneMarginRight="10dp" />

    <TextView
        android:id="@+id/customerSelectPlanRegularPlanTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_customer_plan_select_regular_plan_title"
        android:textColor="@color/activity_customer_plan_select_plan_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/customerSelectPlanRegularPlanDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting
        industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
        when an unknown printer took a galley of type and scrambled."
        android:textColor="@color/activity_customer_plan_select_plan_description"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSelectPlanRegularPlanTitleTextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="\u20B9"
        android:textColor="@color/activity_customer_plan_select_regular_plan_input"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/customerPlanSelectRegularPlanAddButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/customerPlanSelectRegularPlanAddButton" />

    <EditText
        android:id="@+id/customerPlanSelectRegularPlanInputEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="@color/activity_customer_plan_select_regular_plan_input_background"
        android:ems="10"
        android:hint="@string/activity_customer_plan_select_regular_plan_amount_hint"
        android:inputType="number"
        android:paddingStart="8dp"
        android:paddingBottom="5dp"
        android:textColor="@color/activity_customer_plan_select_regular_plan_input"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15" />

    <Button
        android:id="@+id/customerPlanSelectRegularPlanAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/customer_plan_select_button_background"
        android:text="@string/activity_customer_plan_select_regular_plan_button_text"
        android:textColor="@color/activity_customer_plan_select_plan_button_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSelectPlanRegularPlanDescriptionTextView" />

    <View
        android:id="@+id/viewDown"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/activity_customer_plan_select_horizontal_line"
        app:layout_constraintBottom_toTopOf="@+id/customerPlanSelectRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerPlanSelectRegularPlanAddButton"
        app:layout_goneMarginRight="10dp" />

    <Button
        android:id="@+id/customerPlanSelectSkipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/customer_plan_select_skip_button_background"
        android:text="@string/activity_customer_plan_select_skip_button_text"
        android:textColor="@color/activity_customer_plan_select_skip_button_text"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customerPlanSelectRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/customerPlanSelectSkipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDown"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>